fix: improve dropdown and submenu positioning, remove layout shifts

--- a/css/style.css
+++ b/css/style.css
@@ -296,14 +296,15 @@ img {
   list-style: none;
 }
 
-.nav ul li {
+.nav-item {
   position: relative;
 }
 
 .dropdown {
   position: absolute;
   top: 100%;
-  left: -52px;
+  left: 50%;
+  transform: translateX(-50%);
   display: none;
   padding: 10px 0;
   z-index: 100;
@@ -314,9 +315,10 @@ img {
 .dropdown li {
   list-style: none;
   background: #EDF6EE;
+  position: relative;
 }
 
-.dropdown > li:has(.submenu):after{
+.dropdown>li:after {
   content: "";
   width: 10px;
   height: 10px;
@@ -329,15 +331,39 @@ img {
   top: 50%;
 }
 
-.dropdown > li:hover:after{
+.dropdown>li:has(.submenu):hover:after {
   border-color: #EDF6EE;
   transform: rotate(-135deg) translateY(7px);
-}
+} 
 
 
-.dropdown li:hover .submenu{
+.dropdown li:hover .submenu {
   display: block;
 }
+
+
+/* .has-submenu > a {
+  position: relative;
+}
+
+.has-submenu > a::after {
+  content: "";
+  width: 8px;
+  height: 8px;
+  border: solid #3D3D3D;
+  border-width: 1px 1px 0 0;
+
+  position: absolute;
+  right: 10px;
+  top: 50%;
+
+  transform: translateY(-50%) rotate(45deg);
+}
+
+.has-submenu:hover > a::after {
+  border-color: #fff;
+  transform: translateY(-50%) rotate(-135deg);
+} */
 
 .dropdown a {
   color: #3D3D3D;
@@ -345,19 +371,21 @@ img {
   border-bottom: 1px solid #EDF6EE;
   padding: 7px 14px;
 }
-.submenu{
-  top: -300%;
-  padding: 0;
-  position: absolute;
-  left: 101%;
+
+.submenu {
+  padding-left: 2px; 
+  top: 40px;
+  position: fixed;
+  left: 100%;
   width: 178px;
   display: none;
 }
 
-.dropdown li:hover > a {
+
+
+.dropdown li:hover>a {
   background-color: #1A712A;
   color: #FFFFFF;
-  font-family: Encode Sans Expanded;
   font-weight: 700;
   font-size: 16px;
 
@@ -392,7 +420,7 @@ img {
 
 }
 
-.nav-link:after  {
+.nav-link:after {
   content: "";
   position: absolute;
   left: 0;
@@ -404,16 +432,17 @@ img {
   transition: 0.3s;
 }
 
-.nav-item:hover > .nav-link::after {
+.nav-item:hover>.nav-link::after {
   opacity: 1;
 }
 
 .nav-link:hover {
   color: black;
   font-size: 16px;
-  
+
 }
-.nav-item:hover > a{
+
+.nav-item:hover>a {
   color: black;
   font-size: 16px;
   opacity: 1;
